syntax = "proto3";
package pbclient;
option go_package = "roomcell/pkg/pb/pbclient";

// 拯救玩家
enum ERescueStep
{
    ERescueStepReady        = 0;      // 准备阶段
    ERescueStepRunning      = 1;      // 奔跑阶段
    ERescueStepEnd          = 2;      // 结束
}

// 玩家游戏数据
message RescuePlayerGameData
{
    int64 RoleID = 1;       // 角色id
    string Nickname = 2;    // 昵称
    int32 Icon = 3;         // 图像
    bool IsOnline = 4;      // 是否在线
    int32 Ready = 5;        // 准备状态 0-未准备 1-准备了
    int32 Hp = 6;           // 玩家hp
}

// 房间游戏数据
message RoomRescueDetail {
    int32 RoomStep = 1;     // 房间游戏阶段 对应 EUndercoverStep
    int64 StepTime = 2;     // 阶段对应的开始时间戳
    map<int64,RescuePlayerGameData> PlayersGameData = 3; // 玩家游戏数据
    int32 MaxTime = 4;
    int32 MaxHp = 5;
    repeated int64 RankList = 6;    // 排名列表(数组元素为玩家id)
}

// ECMsgGameRescueSetting      = 70 // 拯救玩家-设定
message ECMsgGameRescueSettingReq
{
    int32 MaxTime = 1;  // 最大时间(秒)
    int32 MaxHp = 2;    // 最大血量设定
}
message ECMsgGameRescueSettingRsp
{
}

// ECMsgGamePushRescueRoomData = 71 // 数字炸弹-推送房间游戏数据
message ECMsgGamePushRescueRoomDataNotify
{
    RoomRescueDetail RoomGameData = 1;
}
	
// ECMsgGamePushRescueSetting  = 72 // 拯救玩家-设定推送
message ECMsgGamePushRescueSettingNotify
{
    int32 MaxHp = 1;
    int32 MaxTime = 2;
}

// ECMsgGameRescueRecvGift     = 73 // 拯救玩家-收到礼物
message ECMsgGameRescueRecvGiftReq
{
    int64 RoleID = 1;
    int32 ItemID = 2; // 道具ID
}
message ECMsgGameRescueRecvGiftRsp
{

}
// ECMsgGamePushRescueRecvGift = 74 // 拯救玩家-收到礼物推送
message ECMsgGamePushRescueRecvGiftNotify
{
    int64 RoleID = 1;
    int32 ItemID = 2; // 道具ID
}

// ECMsgGameRescueChangeHp           = 75 // 拯救玩家-hp更改
message ECMsgGameRescueChangeHpReq
{
    bool Add = 1;   // true:增加 false:减少
    int32 Val = 2;  // 变化的hp值
}
message ECMsgGameRescueChangeHpRsp
{
}

// ECMsgGamePushRescueChangeHp       = 76 // 拯救玩家-hp更改通知
message ECMsgGamePushRescueChangeHpNotify
{
    int64 RoleID = 1;
    bool Add = 2;   // true:增加 false:减少
    int32 Val = 3;  // 变化的hp值
}
